# Checks-out__Slint-Rust

./: .gitignore  AboutFramework.md  Cargo.toml  README.md
data-bin/: foo.txt
md/: starting.md
src/: main.rs  password-events.rs  reader.rs
ui/: appwindow.slint
ui/app/: password-view.slint
ui/components/: feedback.slint  navbar.slint
ui/layouts/: stacks.slint
ui/styled/: break.slint  button.slint  input.slint  labeled-input.slint
