[package]
name = "test-up"
version = "0.1.0"
authors = ["Jace <jt.scripter@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"
magic-crypt = "3.1.9"

[build-dependencies]
slint-build = "1.0"
